force-app/main/default/objects/Connect_Six_Game__c/Connect_Six_Game__c.object-meta.xml
<CustomObject>
    <description>One Connect Six game between two users. Written only by ConnectSixController.</description>
    <label>Connect Six Game</label>
    <nameField>
        <displayFormat>C6-{0000}</displayFormat>
        <label>Game Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connect Six Games</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>