force-app/main/default/objects/Connect_Six_Game__c/fields/Black_Player__c.field-meta.xml
<CustomField>
    <fullName>Black_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User playing black (moves first). Creator of the game.</description>
    <label>Black Player</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connect_Six_Games_As_Black</relationshipName>
    <type>Lookup</type>
</CustomField>