force-app/main/default/objects/Connect_Six_Game__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <description>361 characters, row by row: . empty, B black, W white. Index = row * 19 + column.</description>
    <label>Board</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>