force-app/main/default/objects/Connect_Six_Game__c/fields/Last_Move__c.field-meta.xml
<CustomField>
    <fullName>Last_Move__c</fullName>
    <description>Stones placed in the most recent turn, e.g. B:180,181 (color, then board indexes).</description>
    <label>Last Move</label>
    <length>20</length>
    <type>Text</type>
</CustomField>