force-app/main/default/objects/Connect_Six_Game__c/fields/Move_Count__c.field-meta.xml
<CustomField>
    <fullName>Move_Count__c</fullName>
    <description>Total stones placed.</description>
    <label>Move Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>