force-app/main/default/objects/Connect_Six_Game__c/fields/Stones_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Stones_Remaining__c</fullName>
    <description>Stones the player to move still has to place this turn (1 on Black's first turn, otherwise 2).</description>
    <label>Stones Remaining</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>