force-app/main/default/objects/Connect_Six_Game__c/fields/Turn__c.field-meta.xml
<CustomField>
    <fullName>Turn__c</fullName>
    <description>Color whose turn it is.</description>
    <label>Turn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
                <default>true</default>
                <label>Black</label>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>