force-app/main/default/objects/Connect_Six_Game__c/fields/White_Player__c.field-meta.xml
<CustomField>
    <fullName>White_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User playing white. Set when someone joins.</description>
    <label>White Player</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connect_Six_Games_As_White</relationshipName>
    <type>Lookup</type>
</CustomField>