force-app/main/default/objects/Connect_Six_Game__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Winning user. Blank while in progress or when a game ends with no winner.</description>
    <label>Winner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Connect_Six_Games_Won</relationshipName>
    <type>Lookup</type>
</CustomField>