force-app/main/default/objects/Connect_Six_Game__c/fields/Winning_Line__c.field-meta.xml
<CustomField>
    <fullName>Winning_Line__c</fullName>
    <description>Comma-separated board indexes of the winning line.</description>
    <label>Winning Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>